--- a/springmicroservicestwo.properties
+++ b/springmicroservicestwo.properties
@@ -1,2 +1,3 @@
 spring.message=hey i am in second microservice
 server.port=8086
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
