--- a/springmicroservicestwo.properties
+++ b/springmicroservicestwo.properties
@@ -1,3 +1,3 @@
-server.port=8086
-spring.message=hey,i am in second microservice
+server.port=8087
+spring.message=hey i am in second microservice
 eureka.client.service-url.default-zone=http://localhost:8761/
