--- a/springmicroservices.properties
+++ b/springmicroservices.properties
@@ -1,2 +1,4 @@
-server.port=8085
-spring.message=hi i am in first microservice
+server:
+  port=8085
+spring:
+  message:hi i am in first microservice
