--- a/springmicroservicestwo.properties
+++ b/springmicroservicestwo.properties
@@ -1,2 +1,4 @@
-server.port=8087
-spring.message=hey i am in second microservice
+server:
+  port:8087
+spring:
+  message:hey i am in second microservice
